==> joakimtoe/zephyr/drivers/usb/device/usb_dc_nrf5.c <==
#include <soc.h>
#include <string.h>
#include <usb/usb_dc.h>
#include <usb/usb_device.h>
#include "nrf_drv_usbd.h"
#include "nrf_power.h"
#include "nrf_clock.h"
#define SYS_LOG_LEVEL CONFIG_SYS_LOG_USB_DRIVER_LEVEL
#include <logging/sys_log.h>
#define STARTUP_DELAY 100

int usb_dc_attach(void) 
{
    SYS_LOG_DBG("usb_dc_attach");
    ret_code_t ret_code; 
 
    init_power_clock(); 
 
    if (NRF_DRV_USBD_ERRATA_ENABLE) 
    { 
        (void)nrf_drv_usbd_errata_104(); 
        (void)nrf_drv_usbd_errata_154(); 
    } 
 
    ret_code = nrf_drv_usbd_init(usbd_event_handler); 
    if (ret_code != NRF_SUCCESS) 
    { 
        return -1; 
    } 
 
    usb_nrf5_udelay(STARTUP_DELAY*5); 

    if (!nrf_drv_usbd_is_enabled()) 
    { 
        nrf_drv_usbd_enable(); 
    } 
    /* Wait for regulator power up */ 
    while (NRF_DRV_POWER_USB_STATE_CONNECTED 
            == 
            nrf_drv_power_usbstatus_get()) 
    { 
        /* Just waiting */ 
    } 

    if (NRF_DRV_POWER_USB_STATE_READY == nrf_drv_power_usbstatus_get()) 
    { 
        if (!nrf_drv_usbd_is_started()) 
        { 
            nrf_drv_usbd_start(true);
        } 
    } 
    else 
    { 
        nrf_drv_usbd_disable(); 
        return -1; 
    } 
 
    return 0; 
}

int usb_dc_set_status_callback(const usb_dc_status_callback cb) 
{
    SYS_LOG_DBG("usb_dc_set_status_callback");
    usb_nrf5.status_cb = cb; 
 
    return 0; 
}

int usb_dc_ep_configure(const struct usb_dc_ep_cfg_data *const cfg) 
{
    SYS_LOG_DBG("usb_dc_ep_configure: ep 0x%02x, ep_mps %u, ep_type %u",
                cfg->ep_addr, cfg->ep_mps, cfg->ep_type);

    nrf_drv_usbd_ep_max_packet_size_set(cfg->ep_addr, cfg->ep_mps);

    usb_nrf5_ep_state_t *p_ep_state = usb_nrf5_ep_state_get(cfg->ep_addr);

    if (!p_ep_state)
    {
        return -EINVAL;
    }

    // TODO: handle ep_type??
    p_ep_state->ep_mps = cfg->ep_mps;
    p_ep_state->ep_type = cfg->ep_type;

    return 0;
}

int usb_dc_ep_set_stall(const u8_t ep) 
{
    SYS_LOG_DBG("usb_dc_ep_set_stall: ep=0x%02x", ep);
    nrf_drv_usbd_ep_stall((nrf_drv_usbd_ep_t)ep);

    usb_nrf5_ep_state_t *p_ep_state = usb_nrf5_ep_state_get(ep);

    if (!p_ep_state)
    {
        return -EINVAL;
    }

    p_ep_state->ep_stalled = 1;

    return 0;
}

int usb_dc_ep_clear_stall(const u8_t ep) 
{
    SYS_LOG_DBG("usb_dc_ep_clear_stall: ep=0x%02x", ep);
    nrf_drv_usbd_ep_stall_clear((nrf_drv_usbd_ep_t)ep);

    usb_nrf5_ep_state_t *p_ep_state = usb_nrf5_ep_state_get(ep);

    if (!p_ep_state)
    {
        return -EINVAL;
    }

    p_ep_state->ep_stalled = 0;
    p_ep_state->read_count = 0;

    return 0; 
}

int usb_dc_ep_is_stalled(const u8_t ep, u8_t *const stalled) 
{
    SYS_LOG_DBG("usb_dc_ep_is_stalled: ep=0x%02x", ep);
    bool stall = false; 
 
    if (!stalled) 
    { 
        return -1; 
    } 
 
    stall = nrf_drv_usbd_ep_stall_check((nrf_drv_usbd_ep_t)ep); 
 
    *stalled = (u8_t)stall; 
    return 0; 
}

int usb_dc_ep_enable(const u8_t ep) 
{
    SYS_LOG_DBG("usb_dc_ep_enable: ep=0x%02x", ep);

    usb_nrf5_ep_state_t *p_ep_state = usb_nrf5_ep_state_get(ep);
    if (!p_ep_state)
    {
        return -EINVAL;
    }

    nrf_drv_usbd_ep_enable((nrf_drv_usbd_ep_t)ep);

    if (NRF_USBD_EPOUT_CHECK(ep) && ep != NRF_DRV_USBD_EPOUT0)
    {
        int ret = usb_dc_ep_start_read(ep,
                                   p_ep_state->buf,
                                   NRF_DRV_USBD_EPSIZE);
        if (ret)
            return ret;
    }
    return 0; 
}

int usb_dc_ep_disable(const u8_t ep) 
{
    SYS_LOG_DBG("usb_dc_ep_disable: ep=0x%02x", ep);
    nrf_drv_usbd_ep_disable((nrf_drv_usbd_ep_t)ep); 
    return 0; 
}

int usb_dc_ep_write(const u8_t ep, const u8_t *const data, 
                    const u32_t data_len, u32_t *const ret_bytes) 
{
    SYS_LOG_DBG("usb_dc_ep_write: ep=0x%02x", ep);
    ret_code_t ret_code; 

    const nrf_drv_usbd_transfer_t transfer = { 
        .p_data = { 
            .tx = data, 
        }, 
        .size = data_len, 
        .flags = 0, 
    }; 
 
    ret_code = nrf_drv_usbd_ep_transfer((nrf_drv_usbd_ep_t)ep, &transfer); 
    if (ret_code == NRF_SUCCESS) 
    { 
        return 0; 
    } 
 
    return -1; 
}

int usb_dc_ep_start_read(u8_t ep, u8_t *data, u32_t max_data_len)
{
    SYS_LOG_DBG("usb_dc_ep_start_read: ep=0x%02x, len %u", ep, max_data_len);

    /* we flush EP0_IN by doing a 0 length receive on it 
    if (!EP_IS_OUT(ep) && (ep != EP0_IN || max_data_len))
    {
        SYS_LOG_ERR("invalid ep 0x%02x", ep);
        return -EINVAL;
    } */

    if (max_data_len > NRF_DRV_USBD_EPSIZE)
    {
        max_data_len = NRF_DRV_USBD_EPSIZE;
    }

    const nrf_drv_usbd_transfer_t transfer = {
        .p_data = {
            .rx = data,
        },
        .size = max_data_len,
        .flags = 0,
    };

    ret_code_t ret_code = nrf_drv_usbd_ep_transfer((nrf_drv_usbd_ep_t)ep, &transfer);
    if (ret_code != NRF_SUCCESS)
    {
        SYS_LOG_ERR("nrf_drv_usbd_ep_transfer failed(0x%02x), %d",
                    ep, (int)ret_code);
        return -EIO;
    }

    return 0;
}

int usb_dc_ep_get_read_count(u8_t ep, u32_t *read_bytes)
{
    if (!NRF_USBD_EPOUT_CHECK(ep))
    {
        SYS_LOG_ERR("invalid ep 0x%02x", ep);
        return -EINVAL;
    }

    *read_bytes = nrf_usbd_epout_size_get(ep);

    return 0;
}

int usb_dc_ep_set_callback(const u8_t ep, const usb_dc_ep_callback cb) 
{
    SYS_LOG_DBG("usb_dc_ep_set_callback: ep=0x%02x", ep);
    usb_nrf5_ep_state_t *p_ep_state = usb_nrf5_ep_state_get(ep);

    if (!p_ep_state)
    {
        return -EINVAL;
    }

    p_ep_state->cb = cb;

    return 0;
}
